@@ -5,13 +5,13 @@ all: asap2wav.exe
 
 include ../players/Makefile
 
-asap2wav.exe: asap2wav.cs ASAP.cs $(PLAYERS_OBX)
-	$(CSC) $(foreach plr,$(PLAYERS),-res:../players/$(plr).obx,$(plr).obx) asap2wav.cs ASAP.cs
+asap2wav.exe: asap2wav.cs ASAP.cs
+	$(CSC) asap2wav.cs ASAP.cs
 
-ASAP.cs: ASAP.ppcs ../asap.c ../acpu.c ../apokeysnd.c ../asap.h ../asap_internal.h ../anylang.h
+ASAP.cs: ASAP.ppcs ../asap.c ../acpu.c ../apokeysnd.c ../asap.h ../asap_internal.h ../anylang.h ../players.h
 	$(PP) ASAP.ppcs > $@
 
 clean:
-	rm -f asap2wav.exe ASAP.cs ../players/*.obx
+	rm -f asap2wav.exe ASAP.cs
 
 .DELETE_ON_ERROR:
