@@ -1,4 +1,7 @@
 2010-01-09  Piotr Fusik  <fox@scene.pl>
+* asap.c, anylang.h, csharp/Makefile:
+  use initialized byte arrays and not resources in C#
+
 * java/ASAP.ppjava, java/ASAP2WAV.java, java/ASAPApplet.java,
   java/ASAPMIDlet.java: moved common code to readAndClose()
 
